worked on add event type page.

--- a/src/main/resources/application-achiever.menschenfahren.properties
+++ b/src/main/resources/application-achiever.menschenfahren.properties
@@ -14,3 +14,5 @@ menschen.user-service-endpoints.users=users
 menschen.user-service-endpoints.user=user
 menschen.event-service-endpoints.event=event
 menschen.event-service-endpoints.events=events
+menschen.event-type-service-endpoints.eventType=eventType
+menschen.event-type-service-endpoints.eventTypes=eventTypes
