--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,14 @@
             <artifactId>a-vaadin-helper</artifactId>
             <version>1.5.0</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.appreciated/card -->
+		<dependency>
+		    <groupId>com.github.appreciated</groupId>
+		    <artifactId>card</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
 
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
